--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>ورود</string>
+   <string>صفحه اصلی</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
@@ -29,7 +29,7 @@
      <x>0</x>
      <y>0</y>
      <width>385</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
