--- a/adminpanel.ui
+++ b/adminpanel.ui
@@ -452,8 +452,18 @@
     </disabled>
    </palette>
   </property>
+  <property name="font">
+   <font>
+    <family>B Yekan</family>
+    <pointsize>9</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>مدیریت</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icons/admin-ui (1).png</normaloff>icons/admin-ui (1).png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -641,7 +651,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="usersTab">
        <property name="enabled">
@@ -861,7 +871,7 @@
      <x>0</x>
      <y>0</y>
      <width>1010</width>
-     <height>25</height>
+     <height>28</height>
     </rect>
    </property>
   </widget>
